# OpenPonyLogger

./: .gitignore  .gitmodules  BOM.md  CONFIGURATION_IMPLEMENTATION.md  CONTRIBUTING.md  PROJECT_COMPLETION_SUMMARY.md  QUICK_START.md  README.md  RT_LOGGER_ARCHITECTURE.md  TECHNICAL_IMPLEMENTATION.md  UNITS_AND_DISPLAY.md  _codeql_detected_source_root  build_log.txt  build_output.txt  partitions.csv  platformio.ini
components/: README.md
components/drivers/: icm20948_driver.cpp  pa1010d_driver.cpp
components/drivers/include/: icm20948_driver.h  max17048_driver.h  pa1010d_driver.h
components/hal/: sensor_hal.cpp
components/hal/include/: sensor_hal.h
components/logger/: rt_logger_thread.cpp  storage_reporter.cpp
components/logger/include/: rt_logger_thread.h  storage_reporter.h
components/logging/: CMakeLists.txt
components/logging/examples/: session_example.c
components/logging/include/: log_block.h  session_header.h  session_helper.h
components/logging/src/: session_helper.c
docs/: BEFORE_AND_AFTER.md  BOM.md  BUTTON_CONTROL.md  IMPLEMENTATION_CHECKLIST.md  IMPROVEMENTS_SUMMARY.md  LOG_FORMAT.md  NEOPIXEL_QUICK_REFERENCE.md  OPENPONY_BINARY_FORMAT.md  PROJECT_CHECKLIST.md  QUICK_START_UNITS_DISPLAY.md  RECORD_SCHEMA.md  VISUAL_SUMMARY.md
lib/Config/include/: config_manager.h
lib/Config/src/: config_manager.cpp
lib/Display/: display_labels.cpp  st7789_display.cpp
lib/Display/include/: display_labels.h  st7789_display.h
lib/Drivers/: icar_ble_driver.cpp  icar_ble_wrapper.cpp  icm20948_compass_wrapper.cpp  icm20948_driver.cpp  icm20948_gyro_wrapper.cpp  max17048_driver.cpp  pa1010d_driver.cpp
lib/Drivers/include/: icar_ble_driver.h  icar_ble_wrapper.h  icm20948_compass_wrapper.h  icm20948_driver.h  icm20948_gyro_wrapper.h  max17048_driver.h  pa1010d_driver.h
lib/Logger/: rt_logger_thread.cpp  status_monitor.cpp  storage_reporter.cpp
lib/Logger/include/: compression.h  config_manager.h  (+6 more)
lib/SensorHAL/: sensor_hal.cpp
lib/WiFi/: wifi_manager.cpp
src/: Build_Guide.md  CMakeLists.txt  FRAMEWORK_README.md  core0_producer.c  core1_consumer.c  hw_config.c  hw_config.h  main.c  main.cpp  ring_buffer.h  telemetry_types.h
tools/: README.md  openpony_decoder.py  opl_to_csv.py
web/: CACHING_GUIDE.md  COMPARISON.md  CORRECT_DOWNLOAD_URLS.md  DEPLOYMENT.md  DOWNLOAD_NOW.txt  FEATURE_UPDATES.md  FILE_STRUCTURE.txt  LOGO_QUICK_START.txt  LOGO_SETUP.md  NEW_FEATURES_GUIDE.txt  OFFLINE_README.txt  OFFLINE_SETUP.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  START_HERE.md  V1.3_NEW_FEATURES.md  WIFI_BLUETOOTH_FEATURES.md  app.js  download-gauge-library.bat  download-gauge-library.sh  index.html  styles.css
(+13 files in other folders)
